# Homo_DeUS

./: .gitignore  .gitmodules  README.md
Dialogue/: STT.py  audioPipe.py  gTTS.py
Modules/: README.md
Modules/Commun/: README.md
Modules/Deplacement/: README.md
Modules/Deplacement/approche_client/: CMakeLists.txt  issue.txt  package.xml  setup.py
Modules/Deplacement/approche_client/launch/: approche_client.launch
Modules/Deplacement/approche_client/rosbag/: rosbag_approche_client  session_approche_client_mss.bag  session_approche_client_wnw.bag
Modules/Deplacement/approche_client/src/: approche_client.py  main_ApprocheClient  main_ApprocheClient.py  obstacle_detector_sonar.py  perception_pose.py  pseudo_depthimage.py  pseudo_facedetection.py
Modules/Dialogue/: audioPipe.py  listener.py  speaker.py
Modules/HBBA/: Desire.py  DesireSet.py  Main.py  Motivation.py  RosFilterPool.py  Strategy.py
Modules/HBBA/Include/: HDStrategy.h
Modules/HBBA/Include/hbba_lite/: HDStrategies.h  HDStrategy.h  Motivation.h  Motivations.h
Modules/HBBA/MotivationList/: GuiderClientTable.py  Promenade.py
Modules/HBBA/hbba_lite/: filter_states.py  publishers.py  subscribers.py
Modules/HBBA/src/hbba_lite_cpp/core/: HDStrategies.cpp  HDStrategy.cpp  Motivation.cpp  Motivations.cpp
Modules/Navigation/: CMakeLists.txt  README.md  package.xml  setup.py
Modules/Navigation/NavSelector/: NavGoal.py  NavGoalDeserializer.py  NavSelector.py  fake_navGoal_publisher.py  homodeus_precomp.py  main_navSelector.py  predefNavGoal.json  test_main_selector.py
Modules/Navigation/Worlds/3IT/contour_labo_3it/: model.sdf
Modules/Navigation/launch/: navSelector_over_topic.launch  nav_selector_test.launch  readme.md
Modules/Préhension/homodeus_tests_prehension/: CMakeLists.txt  package.xml
Modules/Préhension/homodeus_tests_prehension/cfg/: region.cfg  segment.cfg
Modules/Préhension/homodeus_tests_prehension/config/: pcl_cylinder.rviz
Modules/Préhension/homodeus_tests_prehension/launch/: cylinder_detector.launch  main_plane_detector.launch  object_segmentation.launch  pcl_region.launch  pcl_segment.launch  segment_table.launch
Modules/Préhension/homodeus_tests_prehension/msg/: ObjectPoseSize.msg
Modules/Préhension/homodeus_tests_prehension/src/: geometry.cpp  pcl_filters.cpp  tf_transforms.cpp
Modules/Préhension/homodeus_tests_prehension/src/nodes/: object_detector.cpp  segment_table.cpp
Modules/Préhension/zTests/: CMakeLists.txt  package.xml
Modules/Préhension/zTests/config/: pick_positions.yaml
Modules/Préhension/zTests/include/homodeus_arm_interface/: ArmInterface.h  ArmInterfaceNode.h
Modules/Préhension/zTests/scripts/: bhvr_approach_client.py  bhvr_dialoguing.py  bhvr_face_tracking.py  bhvr_look_around.py  bhvr_nav_listener.py  bhvr_talking.py  bhvr_tracking_object.py  test.json  test.yaml
Modules/Préhension/zTests/src/: ArmInterface.cpp  homodeus_arm_interface_node.cpp
NavSelector/: NavSelector.py  homodeus_precomp.py  main_navSelector.py  predefNavGoal.json
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/lib/pkgconfig/: dialogue.pc
catkin_ws/devel/share/dialogue/cmake/: dialogueConfig.cmake
catkin_ws/src/audio_package/: CMakeLists.txt  package.xml
catkin_ws/src/audio_package/src/: PubMicro.py  SubMicro.py  config.yml  domain.yml  micro.py  speaker.py  transcribe.py  transcribe_demo.py
catkin_ws/src/audio_package/src/.rasa/cache/: cache.db
catkin_ws/src/audio_package/src/.rasa/cache/tmp0kilgace/: memorized_turns.json
catkin_ws/src/audio_package/src/.rasa/cache/tmp2zdt_aay/: rule_policy.json
catkin_ws/src/audio_package/src/.rasa/cache/tmp6an2d0ox/: featurizer.json  ted_policy.data_example.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
catkin_ws/src/audio_package/src/.rasa/cache/tmp6mq6h8ml/: DIETClassifier.data_example.pkl  DIETClassifier.tf_model.index
catkin_ws/src/audio_package/src/.rasa/cache/tmp_ah89amw/: vocabularies.pkl
catkin_ws/src/audio_package/src/.rasa/cache/tmpa3mt1yd2/: DIETClassifier.tf_model.index
catkin_ws/src/audio_package/src/.rasa/cache/tmpbn9blwuf/: vocabularies.pkl
catkin_ws/src/audio_package/src/.rasa/cache/tmpc445_tkn/: vocabularies.pkl
catkin_ws/src/audio_package/src/.rasa/cache/tmpcjtqdbtc/: unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
catkin_ws/src/audio_package/src/.rasa/cache/tmpdp8usj1m/: memorized_turns.json
catkin_ws/src/audio_package/src/.rasa/cache/tmpf2r5twxy/: featurizer.json  unexpected_intent_policy.data_example.pkl  unexpected_intent_policy.fake_features.pkl  unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
catkin_ws/src/audio_package/src/.rasa/cache/tmpfy8vn1ue/: DIETClassifier.tf_model.index
catkin_ws/src/audio_package/src/.rasa/cache/tmpgnisqk73/: memorized_turns.json
catkin_ws/src/audio_package/src/.rasa/cache/tmpkhze5o__/: ted_policy.data_example.pkl  ted_policy.fake_features.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
catkin_ws/src/audio_package/src/.rasa/cache/tmpkjj_jnw7/: rule_policy.json
catkin_ws/src/audio_package/src/.rasa/cache/tmpkv2t_6e_/: unexpected_intent_policy.data_example.pkl  unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001  (+1 more)
catkin_ws/src/audio_package/src/data/: nlu.yml  rules.yml  stories.yml
catkin_ws/src/commun/custom_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/commun/custom_msgs/msg/: FacePosition.msg  FacePositions.msg
catkin_ws/src/dialogue/: CMakeLists.txt  package.xml
catkin_ws/src/maps/: README.md
catkin_ws/src/maps/3it_introlab_P2-2007/: submap_0.pgm
catkin_ws/src/maps/pal_kitchen/: map.pgm
catkin_ws/src/maps/simple_office_with_people/: map.pgm
catkin_ws/src/worlds/: 3it_introlab_P2-2007.world  README.md
commons/: app.py
world/: zhomodeus_3it.world
world/contour_labo_3it/: model.config
(+20 files in other folders)
