<?xml version="1.0"?>
<package format="2">
  <name>Navigation</name>
  <version>2.3.16</version>
  <description>Base navigation from homodeus</description>
  <maintainer email="homodeus@usherbrooke.ca">HomoDeUS</maintainer>
  <license>Modified BSD</license>
  <!-- <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author> -->

  <build_depend>message_generation</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <!-- <run_depend>geometry_msgs</run_depend> -->
  <!-- <run_depend>move_base_msgs</run_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->
  <!-- <run_depend>actionlib</run_depend> -->
  <!-- <run_depend>actionlib_msgs</run_depend> -->

</package>
